--- a/SageMakerGT-ComprehendNER-A2I-Notebook.ipynb
+++ b/SageMakerGT-ComprehendNER-A2I-Notebook.ipynb
@@ -108,7 +108,7 @@
     "s3 = boto3.client('s3')\n",
     "s3res = boto3.resource('s3')\n",
     "\n",
-    "BUCKET = \"< Enter your S3 BucketName and remove <> >\"\n",
+    "BUCKET = \"a2i-experiments\"\n",
     "role = sagemaker.get_execution_role()\n",
     "region = boto3.session.Session().region_name\n",
     "prefix = \"a2i-comprehend-gtner\" + str(uuid.uuid1())\n",
@@ -463,6 +463,7 @@
    "outputs": [],
    "source": [
     "# Let's download the output.manifest file for format conversion\n",
+    "labeling_job_name = '<enter the name of your GroundTruth labeling job here>'\n",
     "s3.download_file(BUCKET, 'output/' + labeling_job_name + '/manifests/output/output.manifest', 'data/groundtruth/output.manifest')"
    ]
   },
@@ -482,7 +483,8 @@
     "# Read the output manifest json and convert into a csv format as expected by Amazon Comprehend Custom Entity Recognizer\n",
     "import json\n",
     "import csv\n",
-    "\n",
+    "# Here we specify the labeling job name from the output.manifest file\n",
+    "labeling_job_name = 'a2i-comprehend-gtner7c0bf6de-b5a1-11ea-bf5f-12acee018271'\n",
     "# this will be the file that will be written by the format conversion code block below\n",
     "csvout = 'annotations.csv'\n",
     "\n",
@@ -809,8 +811,8 @@
    "source": [
     "import botocore\n",
     "\n",
-    "REGION = '<enter region in which you are running this notebook>'\n",
-    "WORKTEAM_ARN= \"<provide ARN of the private workforce craeted in step 2 b>\""
+    "REGION = 'us-east-1'\n",
+    "WORKTEAM_ARN= \"arn:aws:sagemaker:us-east-1:841408598787:workteam/private-crowd/gt-rekog-a2i-team\""
    ]
   },
   {
@@ -1187,7 +1189,7 @@
     "# I selected the last output.json entry from the list of human loops that were completed above\n",
     "s3 = boto3.client('s3')\n",
     "\n",
-    "s3obj = s3.get_object(Bucket=BUCKET, Key='< provide path of output.json for example output/<a2i>/output.json>')\n",
+    "s3obj = s3.get_object(Bucket=BUCKET, Key='output/a2i-comprehend-gtner9dcaba0e-1928-11eb-94ff-f91d18329acb-fd-a2i/2020/10/28/15/49/36/d1b9b32c-4b97-47fd-9f48-ca349f8a1278/output.json')\n",
     "s3data = s3obj['Body'].read().decode('utf-8')\n",
     "abc = json.loads(s3data)\n",
     "print(str(abc['humanAnswers']))\n"
@@ -1218,7 +1220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
