updated a2i-comprehendner notebook

--- a/SageMakerGT-ComprehendNER-A2I-Notebook.ipynb
+++ b/SageMakerGT-ComprehendNER-A2I-Notebook.ipynb
@@ -463,7 +463,7 @@
    "outputs": [],
    "source": [
     "# Let's download the output.manifest file for format conversion\n",
-    "labeling_job_name = '<enter the name of your GroundTruth labeling job here>'\n",
+    "labeling_job_name = '<your labeling job name>'\n",
     "s3.download_file(BUCKET, 'output/' + labeling_job_name + '/manifests/output/output.manifest', 'data/groundtruth/output.manifest')"
    ]
   },
@@ -483,7 +483,7 @@
     "# Read the output manifest json and convert into a csv format as expected by Amazon Comprehend Custom Entity Recognizer\n",
     "import json\n",
     "import csv\n",
-    "# Here we specify the labeling job name from the output.manifest file\n",
+    "# Here we specify the labeling job name from the output.manifest file - the one below is what was used in the example output.manifest included\n",
     "labeling_job_name = 'a2i-comprehend-gtner7c0bf6de-b5a1-11ea-bf5f-12acee018271'\n",
     "# this will be the file that will be written by the format conversion code block below\n",
     "csvout = 'annotations.csv'\n",
@@ -812,7 +812,7 @@
     "import botocore\n",
     "\n",
     "REGION = 'us-east-1'\n",
-    "WORKTEAM_ARN= \"arn:aws:sagemaker:us-east-1:841408598787:workteam/private-crowd/gt-rekog-a2i-team\""
+    "WORKTEAM_ARN= \"<Enter your workteam ARN>\""
    ]
   },
   {
