--- a/ComprehendEntity- A2I(1).ipynb
+++ b/ComprehendEntity- A2I(1).ipynb
@@ -92,7 +92,7 @@
     "\n",
     "REGION = 'us-east-1'\n",
     "BUCKET_NAME = 'comprehend-data-label'\n",
-    "WORKTEAM_ARN= \"arn:aws:sagemaker:us-east-1:820570838999:workteam/private-crowd/Comprehend\"\n",
+    "WORKTEAM_ARN= \"<enter workteam arn>\"\n",
     "\n"
    ]
   },
@@ -723,7 +723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
